
add_subdirectory(common)
add_subdirectory(bioimport)
add_subdirectory(bioimport2)
add_subdirectory(biocauldron)
add_subdirectory(biorun)
add_subdirectory(bioserver)
add_subdirectory(biosearch)
add_subdirectory(bioshell)
add_subdirectory(wrt)
add_subdirectory(biollm)
add_subdirectory(turingdb)
#add_subdirectory(bioworks)
